Added profile page.

--- a/codebuffalo/codebuffalo/codebuffalo.csproj
+++ b/codebuffalo/codebuffalo/codebuffalo.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="Pages\Template.cshtml" />
+  </ItemGroup>
 </Project>
