--- a/codebuffalo/codebuffalo/codebuffalo.csproj
+++ b/codebuffalo/codebuffalo/codebuffalo.csproj
@@ -10,4 +10,7 @@
   <ItemGroup>
     <Content Remove="Pages\Template.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+  </ItemGroup>
 </Project>
